로그인 화면 수정

--- a/0827_랜딩페이지mission/public/index.html
+++ b/0827_랜딩페이지mission/public/index.html
@@ -131,7 +131,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">챌린지 신청하기</h2>
+                        <h2 class="mt-0">성공하는 습관 챌린지 신청</h2>
                         <hr class="divider" />
                         <p class="text-muted mb-5">챌린지 신청을 원하실 경우 아래 사항을 남겨주세요:D</p>
                     </div>
@@ -142,7 +142,7 @@
                             <input type="text" id="phone" placeholder="휴대폰번호">
 
                             <button id ="join">회원가입</button>
-                            <button id ="login">로그인</button>
+                            <button id ="login">Login누르기</button>
                             <button id ="send">메시지 보내기</button>
 
 
